--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ block-modes = {version = "0.8.1", optional = true}
 sha256 = {version = "1.1.1", optional = true}
 webbrowser = "0.8.0"
 serde_json = "1.0.86"
-machine_uuid = "0.1.0"
 hmac-sha256 = { version = "1.1.4", optional = true}
 hex = "0.4.3"
 base16 = { version = "0.2.1", features = ["alloc"] }
@@ -22,6 +21,8 @@ uuid = {version="1.2.1", features=["v4"] }
 serde = { version = "1.0.126", features = ["derive"] }
 reqwest = { version = "0.11.12", features = ["blocking"] }
 httparse = { version = "1.8.0", optional = true }
+wmi = "0.17.2"
+
 
 [features]
 default = ["v1_2"]
