--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,7 @@ uuid = {version="1.2.1", features=["v4"] }
 serde = { version = "1.0.126", features = ["derive"] }
 reqwest = { version = "0.11.12", features = ["blocking"] }
 httparse = { version = "1.8.0", optional = true }
-wmi = "0.17.2"
-
+machineid-rs = "1.2.4"
 
 [features]
 default = ["v1_2"]
